--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
                 <img id="profile-photo" src="" alt="Profile Photo" class="telegram-icon">
                 <h2 id="profile-name"></h2>
                 <p id="profile-stats"></p>
+                <p id="premium-status" style="color: green;"></p>
                 <div id="badge-container"></div>
             </section>
             <section id="challenges-section" class="app-section" style="display: none;">
